--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -2,11 +2,13 @@
 name: Generate profile metrics
 
 on:
-  # Schedule updates (each hour)
-  schedule: [{cron: "0 * * * *"}]
-  # Lines below let you run workflow manually and on each commit
-  workflow_dispatch:
-  push: {branches: ["master", "main"]}
+  # Schedule updates (every day)
+  schedule:
+    - cron: "0 0 * * *"
+  push:
+    branches:
+      - "master"
+      - "main"
 
 jobs:
   github-metrics:
